# whodat

./: .dockerignore  .railwayignore  DEPLOYMENT.md  Dockerfile  HF_README.md  README.md  app.py  identify  pyproject.toml  pyvenv.cfg  railway.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
app/: main.py  model.py  settings.py
data/: known_dogs.pkl
docs/: README.md  lint.md
frontend/: index.html
